--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
-*.cpp linguist-detectable=false
-*.cc linguist-detectable=false
-*.hpp linguist-detectable=false
-*.py linguist-detectable=false
+googletest/* linguist-vendored=true
+test/* linguist-vendored=true
